added command pattern build  for replay feature

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build1.loader.js";
+      var loaderUrl = buildUrl + "/BuildCommand.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build1.data",
-        frameworkUrl: buildUrl + "/Build1.framework.js",
-        codeUrl: buildUrl + "/Build1.wasm",
+        dataUrl: buildUrl + "/BuildCommand.data",
+        frameworkUrl: buildUrl + "/BuildCommand.framework.js",
+        codeUrl: buildUrl + "/BuildCommand.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Cubeathon",
